--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "eslint": "^4.19.1",
         "eslint-config-airbnb-base": "^12.1.0",
         "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-import": "^2.12.0",
         "husky": "^0.14.3",
         "lint-staged": "^7.2.0",
         "prettier": "^1.13.5"
